[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.6.0"
actix-rt = "2.9.0"
actix-web = "4.5.1"
reqwest = "0.12.4"
tokio = "1.37.0"
